fix: Woo/EDD Cart alignment issue with respect to Toggle Button.

--- a/assets/css/unminified/frontend-rtl.css
+++ b/assets/css/unminified/frontend-rtl.css
@@ -4370,11 +4370,11 @@ li.edd-custom-menu-item .ast-edd-site-header-cart span.astra-icon:after {
 }
 
 /** Cart CSS */
-.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-site-header-cart {
+.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-site-header-cart, .ast-header-break-point.astra-hfb-header .ast-site-header-cart {
   padding: 0;
 }
 
-.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-cart-menu-wrap {
+.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-cart-menu-wrap, .ast-header-break-point.astra-hfb-header .ast-cart-menu-wrap {
   width: 2em;
   height: 2em;
   font-size: 1.4em;
